# getting-started

.devcontainer/: Dockerfile  devcontainer.json
MXChip/AZ3166/: CMakeLists.txt
MXChip/AZ3166/app/: CMakeLists.txt  azure_config.h
MXChip/AZ3166/app/startup/: startup_stm32f412rx.s  tx_initialize_low_level.S
MXChip/AZ3166/oxidation/: Cargo.toml  build.sh  thumbv7em-none-eabihf.template.json
MXChip/AZ3166/oxidation/src/: lib.rs
STMicroelectronics/STM32L4_L4+/: CMakeLists.txt
STMicroelectronics/STM32L4_L4+/app/: CMakeLists.txt  azure_config.h
STMicroelectronics/STM32L4_L4+/app/startup/: startup_stm32l475xx.s
STMicroelectronics/STM32L4_L4+/oxidation/: CMakeLists.txt  thumbv7em-none-eabihf.json
STMicroelectronics/STM32L4_L4+/oxidation/src/: lib.rs
